third_party/move/move-compiler-v2/tests/checking/utf8-comment/utf-8-in-string-with-escaped-quotes.move
address 0x42 {
    module M1 {
        fun u(): u64 { 0 }
        const C1: vector<u8> = b"\注bc";
    }
}
